# malt

./: LICENSE  README.md  error.go  go.mod  malt.go  malt_test.go  parity_test.go  proof.go
docs/models/: verifiable-log.md
rs/: Cargo.toml  README.md
rs/src/: error.rs  lib.rs  proof.rs  tree.rs
rs/tests/: correctness.rs  parity.rs  proofs.rs
rs/tests/common/: mod.rs
testdata/: gen_vectors.go  vectors.json
